<?xml version="1.0"?>
<package format="2">
  <name>duckiebot_stop_and_go</name>
  <version>1.0.0</version>
  <description>
    ROS node for reactive stop-and-go behavior on a Duckiebot.
    Detects red stop lines using ground-projected segments and controls
    the robot FSM, wheel commands, and LED feedback accordingly.
  </description>

  <maintainer email="leonel.valdezc@gmail.com">Leonel Valdez</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>